--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -29,3 +29,26 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (min-width:300px) and (max-width:608px){
+    .conrainerFooter{
+        height: 200px;
+        width: 600px;
+    }
+    
+    .titleFooter{
+        font-size: 22px;
+        line-height: 47px;
+        margin-top: 0px;
+        padding-top: 25px;
+        padding-bottom: 0px
+    }
+    
+    .github{
+        width: 40px;
+        height: 40px;
+        margin-right: 25px;
+    }
+    
+    
+}
