--- a/src/components/proyects.css
+++ b/src/components/proyects.css
@@ -10,7 +10,7 @@
 }
 
 .titleProyects{
-    color:#111111;
+    color: #ffffff;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight:600;
@@ -84,3 +84,229 @@ img {
 }
 
 
+@media screen and (min-width:992px) and (max-width:1200px){
+    .containerCards{
+        height: 800px;
+        
+    }
+    
+    
+    .titleProyects{
+        font-size: 30px;
+        margin-top: 0px;
+        padding:40px 40px 0px 40px;
+    
+    }
+    #card{
+        width: 320px;
+        height: 320px;
+        margin: 30px;
+        border-radius: 20px;
+        position: static;
+    }
+    
+    
+    #cardButtons{
+       
+        height: 120px; 
+    }
+    
+    
+    img {
+        border-style: none;
+        width: 100%;
+        height: 200px;
+    
+    }
+    
+    #img{
+        border-style: none;
+        width: 100%;
+        height: 200px;
+        border-radius: 20px 20px 0px 0px;
+    }
+    
+    #prueba , #prueba2{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .cardButtons{
+        height: 30px;
+        width: 70px;
+        font-size: 14px;
+        padding: 1px;
+        color: #444444;
+        border: #444444 solid 0.5px;
+        border-radius: 5px;
+        background: #3574a9;
+        border: none;
+        color: #FFFFFF;
+        
+    
+    }
+    
+    
+    .nameProyects{
+        font-size: 17px;
+        color: #111111;
+        font-weight: 600;
+        align-items: center;
+        text-align: center;
+        margin-top: 0px;
+        padding-top: 10px;
+        
+    }
+
+}
+
+@media screen and (min-width:609px) and (max-width:991px){
+
+    .containerCards{
+        height: 650px;
+        justify-content: center
+    }
+    
+    
+    
+    .titleProyects{
+        font-size: 26px;
+        margin-top: 0px;
+        padding:40px 40px 0px 40px;
+    
+    }
+    #card{
+        width: 250px;
+        height: 250px;
+        margin: 30px;
+    }
+    
+    
+    #cardButtons{
+       
+        height: 100px; 
+    }
+    
+    
+    img {
+        
+        height: 150px;
+    
+    }
+    
+    #img{
+        border-style: none;
+        width: 100%;
+        height: 150px;
+        border-radius: 20px 20px 0px 0px;
+    }
+    
+    #prueba , #prueba2{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .cardButtons{
+        height: 30px;
+        width: 70px;
+        font-size: 14px;
+        padding: 1px;
+    
+    }
+    
+    
+    .nameProyects{
+        font-size: 16px;
+        font-weight: 600;
+        margin-top: 0px;
+        padding-top: 10px;
+        
+    }
+    
+
+
+}
+
+@media screen and (min-width:300px) and (max-width:608px){
+    
+    .containerProyects{
+        background-color:#ff7b43 ;
+        width: 600px;
+        height: 1050px;
+    }
+    
+    .titleProyects{
+        font-size: 25px;
+    
+    }
+    #card{
+        width: 320px;
+        height: 320px;
+        margin: 20px;
+    
+       
+    }
+    
+    
+    #card{
+        width: 250px;
+        height: 250px;
+        margin: 30px;
+    }
+    
+    
+    #cardButtons{
+       
+        height: 100px; 
+    }
+    
+    
+    img {
+        
+        height: 150px;
+    
+    }
+    
+    #img{
+        border-style: none;
+        width: 100%;
+        height: 150px;
+        border-radius: 20px 20px 0px 0px;
+    }
+    
+    #prueba , #prueba2{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .cardButtons{
+        height: 30px;
+        width: 70px;
+        font-size: 14px;
+        padding: 1px;
+    
+    }
+    
+    
+    .nameProyects{
+        font-size: 16px;
+        font-weight: 600;
+        margin-top: 0px;
+        padding-top: 10px;
+        
+    }
+       
+    .titleAbautMePhone{
+        display: block;
+        color: #FA5711;
+        font-family:'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 26px;
+        line-height: 47px;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.20em;
+        margin-top: 0px;
+        position: inherit;
+        padding-top: 25px;
+        padding-bottom: 0px
+    }
+}
