--- a/src/components/abautMe.css
+++ b/src/components/abautMe.css
@@ -1,8 +1,7 @@
 
-
 .containerAbautMe{
     background-color:white;
-    height: 500px;
+    height:600px;
     padding: 30px;
 }
 
@@ -66,7 +65,9 @@
     border: 2px #fa5711 solid;
     border-radius: 10px;
 }
-
+.row{
+    margin-top: 50px
+}
 @media screen and (min-width:992px) and (max-width:1200px){
     .containerAbautMe{
         height: 600px;
@@ -181,7 +182,7 @@
     #containerTitleText{
         width: 500px;
         justify-content: center;
-        margin-left: 45px;
+        margin-left: 85px;
         margin-top: 70px
     
     }
