--- a/src/components/coverPage.css
+++ b/src/components/coverPage.css
@@ -19,7 +19,7 @@
 .name{
     font-size: 70px;
     font-family: EB GARAMOND;
-    color: #ffffff;
+    color: #FA5711;
     letter-spacing: 4px;
     font-weight: 500;
 }
@@ -30,12 +30,10 @@
 }
 .coverPage{
     width: 100%;
-    height: 650px;
+    height: 700px;
     position: absolute;
     z-index: -1;
 }
-
-
 
 nav{
     position: fixed;
