--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,6 +1,6 @@
 .conrainerFooter{
     background-color: #111111;
-    height: 200px;
+    height: 300px;
 }
 
 .titleFooter{
@@ -8,7 +8,7 @@
     font-family:'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 26px;
     line-height: 47px;
     align-items: center;
     text-align: center;
@@ -20,14 +20,26 @@
 }
 
 .github{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     margin-right: 25px;
 }
 
 .containerLogo{
     display: flex;
     justify-content: center;
+}
+.information{
+  font-size: 16px;
+    font-family: 'Niramit', sans-serif;
+    color: rgba(255, 255, 255, 0.5);
+    width: 500px;
+    justify-content: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+    font-weight: 500;
 }
 
 @media screen and (min-width:300px) and (max-width:608px){
