--- a/src/components/proyects.css
+++ b/src/components/proyects.css
@@ -21,7 +21,7 @@
     text-align: center;
     letter-spacing: 3px;
     margin-top: 0px;
-    padding:40px 40px 0px 40px;
+    padding:70px 40px 0px 40px;
 
 }
 #card{
@@ -192,14 +192,10 @@ img {
 
 @media screen and (min-width:609px) and (max-width:991px){
 
-    /* .containerCards{
-        height: 650px;
-        justify-content: center
-    } */
     
     .containerProyects {
-        /* width: 991px; */
-        height: 700px;
+        
+        height: 900px;
     }
     
     .titleProyects{
@@ -208,7 +204,7 @@ img {
         padding:40px 40px 0px 40px;
     
     }
-    #card{
+    /* #card{
         width: 250px;
         height: 250px;
         margin: 30px;
@@ -232,7 +228,7 @@ img {
         width: 100%;
         height: 150px;
         border-radius: 20px 20px 0px 0px;
-    }
+    } */
     
     #prueba , #prueba2{
         display: flex;
@@ -264,9 +260,8 @@ img {
 @media screen and (min-width:300px) and (max-width:608px){
     
     .containerProyects{
-        background-color:#ff7b43 ;
         width: 672px;
-        height: 800px;
+        height:1200px;
     }
     
     .titleProyects{
@@ -281,37 +276,7 @@ img {
        
     }
     
-    
-    #card{
-        width: 250px;
-        height: 250px;
-        margin: 30px;
-    }
-    
-    
-    #cardButtons{
-       
-        height: 100px; 
-    }
-    
-    
-    img {
-        
-        height: 150px;
-    
-    }
-    
-    #img{
-        border-style: none;
-        width: 100%;
-        height: 150px;
-        border-radius: 20px 20px 0px 0px;
-    }
-    
-    #prueba , #prueba2{
-        display: flex;
-        justify-content: space-evenly;
-    }
+  
     .cardButtons{
         height: 30px;
         width: 70px;
@@ -323,7 +288,6 @@ img {
     
     .nameProyects{
         font-size: 16px;
-        font-weight: 600;
         margin-top: 0px;
         padding-top: 10px;
         
@@ -349,4 +313,6 @@ img {
     .containerCards{
         padding: 0px;
     }
+
+    
 }
