--- a/src/components/coverPage.css
+++ b/src/components/coverPage.css
@@ -10,23 +10,26 @@
     text-align: center;
     margin-top: 200px;
     margin-left: 320px;
-    border: 2px solid;
+    /* border-bottom: 2px solid #111111; */
     width: 800px;
     justify-content: center;
     align-items: center;
+    background: rgba(183, 183, 183, 0.3);
 }
 
 .name{
-    font-size: 70px;
-    font-family: EB GARAMOND;
-    color: #FA5711;
-    letter-spacing: 4px;
-    font-weight: 500;
+  font-size: 95px;
+  font-family: 'Mirza';
+  color: #1f1f1f;
+  letter-spacing: 3PX;
+  font-weight: 700;
 }
 
 .developer{
     font-size: 40px;
     font-family: 'Niramit', sans-serif;;
+    color:#FA5711;
+    font-weight: 600;
 }
 .coverPage{
     width: 100%;
@@ -85,7 +88,7 @@ a:active {
     }
     
     .name{
-        font-size: 70px;
+        font-size: 95px;
     }
     
     .developer{
@@ -123,7 +126,7 @@ a:active {
     }
     
     .name{
-        font-size: 60px;
+        font-size: 80px;
     }
     
     .developer{
@@ -165,7 +168,7 @@ a:active {
     }
     
     .name{
-        font-size: 55px;
+        font-size: 75px;
         
     }
     
