arreglo responsive telefono

--- a/src/components/abautMe.css
+++ b/src/components/abautMe.css
@@ -1,8 +1,8 @@
 
 .containerAbautMe{
     background-color:white;
-    height:670px;
-    padding: 90px 0px 30px 30px;
+    height:730px;
+    padding: 120px 0px 30px 30px;
 }
 
 #titleAbautMe{
@@ -51,7 +51,7 @@
     flex-direction: column;
     align-items: flex-start;
 }
-.titleAbautMePhone{
+.titleAbautMePhone2{
     display: none;
 }
 .containerImg{
@@ -114,9 +114,8 @@ height: 300px;
 
 @media screen and (min-width:609px) and (max-width:991px){
     .containerAbautMe{
-        height: 450px;
-        padding: 30px;
-        
+      height: 660px;
+      padding-top: 150px;
     }
     
     #titleAbautMe{
@@ -155,7 +154,7 @@ height: 300px;
 
 @media screen and (min-width:300px) and (max-width:608px){
     .containerAbautMe {
-        height: 950px;
+        height: 1065px;
         padding: 0px;
         width: 670px;
     }
@@ -167,7 +166,7 @@ height: 300px;
     #textAbautMe{
         width: 100%;
         text-align: justify;
-        font-size: 20px;
+        font-size: 24px;
         align-items: center;
         
        
@@ -196,22 +195,24 @@ height: 300px;
     }
     #containerResponsivePhone{
       margin-top: 0px;
-      padding-top: 20px;
+      padding-top: 40px;
     }
-    .titleAbautMePhone {
+    .titleAbautMePhone2 {
       display: block;
-      color: #FA5711;
-      font-family: 'Poppins', sans-serif;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 26px;
-      line-height: 47px;
-      align-items: center;
-      text-align: center;
-      letter-spacing: 0.20em;
-      margin-top: 0px;
-      position: inherit;
-      padding-top: 75px;
-      padding-bottom: 0px;
+    color: #FA5711;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 47px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.20em;
+    margin-top: 0px;
+    position: inherit;
+    padding: 100px 0px 0px 0px;
+  
+  
+  
 }
 }
