--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -44,12 +44,12 @@
 
 @media screen and (min-width:300px) and (max-width:608px){
     .conrainerFooter{
-        height: 300px;
+        height: 350px;
         width: 672px;
     }
     
     .titleFooter{
-        font-size: 22px;
+        font-size: 30px;
         line-height: 47px;
         margin-top: 0px;
         padding-top: 25px;
@@ -57,10 +57,13 @@
     }
     
     .github{
-        width: 40px;
-        height: 40px;
+        width: 60px;
+        height: 60px;
         margin-right: 25px;
     }
-    
+    .information{
+      font-size: 24px;
+        
+    }
     
 }
