--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -1,5 +1,5 @@
 .skillsContainer{
-    height: 670px;
+    height: 730px;
     background-color: white;
 }
 
@@ -63,14 +63,14 @@
 
 @media screen and (min-width:992px) and (max-width:1200px){
     .skillsContainer{
-        height: 600px;
+        height: 1000px;
         
     }
     
     .skillsTitle{
         font-size: 30px;
         margin-top: 0px;
-        padding:40px 40px 0px 40px;
+        padding:80px 40px 0px 40px;
     }
     
     
@@ -92,7 +92,8 @@
     }
 
     .containeLogos{
-        width: 95%;
+        width: 85%;
+        padding-top: 40px;
        
     }
     
@@ -135,19 +136,19 @@
 
 @media screen and (min-width:300px) and (max-width:608px){
     .skillsContainer{
-        height: 600px;
+        height: 1065px;
         width: 672px;
     }
     
     .skillsTitle{
-        font-size: 25px;
+        font-size: 30px;
         letter-spacing: 3px;
         margin-top: 0px;
-        padding:40px 40px 0px 40px;
+        padding:90px 40px 0px 40px;
     }
     
     
-    .git{
+    /* .git{
         width: 60px;
         height: 60px;
         margin: 30px 30px 0px 30px;
@@ -156,12 +157,12 @@
     .materialize{
       width: 60px;
       height: 40px;
-      margin: 43px 20px 10px 20px;
+      margin: 43px 20px 10px 20px; 
 
-    } 
+    } */
     .parrafo{
         
-        font-size: 16px;
+        font-size: 22px;
         font-weight: 600;
         
     }
